updated html and css to working version

--- a/index.html
+++ b/index.html
@@ -1,45 +1,86 @@
 <!DOCTYPE html>
 <html lang="en-gb">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Jack // Web Developer</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
-</head>
+  <body>
+    <!-- main logo / nav -->
 
-<body>
-  <!-- main logo / nav -->
-  <header>
-    <h1>Lernantino</h1>
-    <nav>
-    </nav>
-  </header>
+    <header>
+      <h1>Jack Labukas</h1>
+      <nav>
+        <a href="#about">About Me</a>
+        <a href="#work">Work</a>
+        <a href="#contact">Contact Me</a>
+        <a href="#resume">Resume</a>
+      </nav>
+    </header>
 
-  <!-- hero banner -->
-  <section class="hero-banner">
-    <div>
-      <h2>Cool subtitle here!</h2>
-    </div>
-  </section>
-
-  <main class="page-wrapper">
-    <!-- about me -->
-    <section class="page-section" id="about">
-      <h2>About Me</h2>
+    <!-- hero banner -->
+    <section class="hero-banner">
+      <h2>Work Showcase</h2>
     </section>
 
-    <!-- portfolio container -->
-    <section class="page-section" id="work">
-      <h2>Work</h2>
-    </section>
+    <main class="page-wrapper">
+      <!-- about me -->
+      <section class="page-section" id="about">
+        <h2>About Me</h2>
+        <p id="aboutMe">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est
+          inventore velit accusamus molestiae ducimus atque cupiditate minus
+          perferendis dolore consequatur, fuga ab suscipit explicabo voluptates
+          porro commodi ipsam impedit sint? Cupiditate ipsam ab cum, mollitia
+          molestiae aperiam amet, recusandae placeat architecto a animi impedit
+          neque quia assumenda dolores quaerat earum voluptatem aspernatur
+          numquam? Sequi adipisci laborum ad? Exercitationem, dolor itaque! Ex
+          incidunt explicabo assumenda cum sit eos enim rem consequatur
+          molestiae delectus natus eveniet soluta laborum, nesciunt voluptates
+          quidem, et rerum quasi. Tenetur, quos neque aperiam dolores nemo ex
+          deserunt. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Est inventore velit accusamus molestiae ducimus atque cupiditate minus
+          perferendis dolore consequatur, fuga ab suscipit explicabo voluptates
+          porro commodi ipsam impedit sint? Cupiditate ipsam ab cum, mollitia
+          molestiae aperiam amet, recusandae placeat architecto a animi impedit
+          neque quia assumenda dolores quaerat earum voluptatem aspernatur
+          numquam? Sequi adipisci laborum ad? Exercitationem, dolor itaque! Ex
+          incidunt explicabo assumenda cum sit eos enim rem consequatur
+          molestiae delectus natus eveniet soluta laborum, nesciunt voluptates
+          quidem, et rerum quasi. Tenetur, quos neque aperiam dolores nemo ex
+          deserunt.
+        </p>
+      </section>
 
-    <!-- contact -->
-    <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
-    </section>
-  </main>
-</body>
+      <!-- portfolio container -->
+      <section class="page-section" id="work">
+        <h2>Work</h2>
+        <div id="images">
+          <div class="workImg1"></div>
+          <div class="workImg2"></div>
+          <div class="workImg3"></div>
+          <div class="workImg4"></div>
+          <div class="workImg5"></div>
+        </div>
+      </section>
 
+      <!-- contact -->
+      <section class="page-section contact" id="contact">
+        <h2>Contact Me</h2>
+        <p id="contactMe">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+          commodi similique laborum labore? Aut minima amet
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
