added working grid to css images

--- a/index.html
+++ b/index.html
@@ -65,11 +65,21 @@
       <section class="page-section" id="work">
         <h2>Work</h2>
         <div id="images">
-          <div class="workImg1"></div>
-          <div class="workImg2"></div>
-          <div class="workImg3"></div>
-          <div class="workImg4"></div>
-          <div class="workImg5"></div>
+          <div class="workImg1">
+            <h1>HTML refactoring</h1>
+          </div>
+          <div class="workImg2">
+            <h1>CSS</h1>
+          </div>
+          <div class="workImg3">
+            <h1>JavaScript</h1>
+          </div>
+          <div class="workImg4">
+            <h1>React</h1>
+          </div>
+          <div class="workImg5">
+            <h1>MongoDB</h1>
+          </div>
         </div>
       </section>
 
