--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Jack // Web Developer</title>
+    <!-- Links to google fonts -->
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,48 +38,53 @@
       <section class="page-section" id="about">
         <h2>About Me</h2>
         <p id="aboutMe">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est
-          inventore velit accusamus molestiae ducimus atque cupiditate minus
-          perferendis dolore consequatur, fuga ab suscipit explicabo voluptates
-          porro commodi ipsam impedit sint? Cupiditate ipsam ab cum, mollitia
-          molestiae aperiam amet, recusandae placeat architecto a animi impedit
-          neque quia assumenda dolores quaerat earum voluptatem aspernatur
-          numquam? Sequi adipisci laborum ad? Exercitationem, dolor itaque! Ex
-          incidunt explicabo assumenda cum sit eos enim rem consequatur
-          molestiae delectus natus eveniet soluta laborum, nesciunt voluptates
-          quidem, et rerum quasi. Tenetur, quos neque aperiam dolores nemo ex
-          deserunt. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          Est inventore velit accusamus molestiae ducimus atque cupiditate minus
-          perferendis dolore consequatur, fuga ab suscipit explicabo voluptates
-          porro commodi ipsam impedit sint? Cupiditate ipsam ab cum, mollitia
-          molestiae aperiam amet, recusandae placeat architecto a animi impedit
-          neque quia assumenda dolores quaerat earum voluptatem aspernatur
-          numquam? Sequi adipisci laborum ad? Exercitationem, dolor itaque! Ex
-          incidunt explicabo assumenda cum sit eos enim rem consequatur
-          molestiae delectus natus eveniet soluta laborum, nesciunt voluptates
-          quidem, et rerum quasi. Tenetur, quos neque aperiam dolores nemo ex
-          deserunt.
+          Hello there! <br />
+          My name is Jack. I have been always intrested in computing and Web. So
+          I have decided to take up structured Online BootCamp to become
+          Full-Stack web developer!<br />
+          This is my CSS skills showcase! Let's have a look!
         </p>
       </section>
 
       <!-- portfolio container -->
       <section class="page-section" id="work">
         <h2>Work</h2>
+
         <div id="images">
-          <div class="workImg1">
-            <h1>HTML refactoring</h1>
+          <div class="workImg1" alt="html project">
+            <h1>
+              HTML
+              <br />
+              Refactoring
+            </h1>
           </div>
-          <div class="workImg2">
-            <h1>CSS</h1>
+          <div class="workImg2" alt="css project">
+            <h1>
+              CSS
+              <br />
+              Dummy
+            </h1>
           </div>
-          <div class="workImg3">
-            <h1>JavaScript</h1>
+          <div class="workImg3" alt="javascript project">
+            <h1>
+              JavaScript
+              <br />
+              Dummy
+            </h1>
           </div>
-          <div class="workImg4">
-            <h1>React</h1>
+          <div class="workImg4" alt="react project">
+            <h1>
+              React
+              <br />
+              Dummy
+            </h1>
           </div>
-          <div class="workImg5">
-            <h1>MongoDB</h1>
+          <div class="workImg5" alt="mongo database project">
+            <h1>
+              MongoDB
+              <br />
+              Dummy
+            </h1>
           </div>
         </div>
       </section>
@@ -87,8 +93,11 @@
       <section class="page-section contact" id="contact">
         <h2>Contact Me</h2>
         <p id="contactMe">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-          commodi similique laborum labore? Aut minima amet
+          <a href="#phone">07490000000</a>
+          <a href="#email">email@example.com</a>
+          <a href="https://github.com/JackLabukas">GitHub</a>
+          <a href="#twitter">Twitter</a>
+          <a href="#Spotify">Spotify</a>
         </p>
       </section>
     </main>
