edited html and css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p id="aboutMe">
           Hello there! <br />
           My name is Jack. I have been always intrested in computing and Web. So
-          I have decided to take up structured Online BootCamp to become
+          I have decided to take up structured Online BootCamp course to become
           Full-Stack web developer!<br />
           This is my CSS skills showcase! Let's have a look!
         </p>
@@ -53,16 +53,32 @@
         <div id="images">
           <div class="workImg1" alt="html project">
             <h1>
-              HTML
+              <a
+                href="https://jacklabukas.github.io/module_1_HTML_challange/"
+                target="_blank"
+                >HTML</a
+              >
               <br />
-              Refactoring
+              <a
+                href="https://jacklabukas.github.io/module_1_HTML_challange/"
+                target="_blank"
+                >Refactoring</a
+              >
             </h1>
           </div>
           <div class="workImg2" alt="css project">
             <h1>
-              CSS
+              <a
+                href="https://jacklabukas.github.io/prework-study-guide/"
+                target="_blank"
+                >Prework</a
+              >
               <br />
-              Dummy
+              <a
+                href="https://jacklabukas.github.io/prework-study-guide/"
+                target="_blank"
+                >Study-Guide</a
+              >
             </h1>
           </div>
           <div class="workImg3" alt="javascript project">
