linked css images

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
         <h2>Work</h2>
 
         <div id="images">
+          <!-- if i wrap this 'workImg1' in anchor tag,
+          image shrinks to half on the collum 50% instead of 100% but the other ones work! if i use height property on individual 'workImg' selectors-->
           <div class="workImg1" alt="html project">
             <h1>
               <a
-                href="https://jacklabukas.github.io/module_1_HTML_challange/"
                 target="_blank"
+                href="https://jacklabukas.github.io/module_1_HTML_challange/"
                 >HTML</a
               >
               <br />
@@ -67,42 +69,48 @@
             </h1>
           </div>
 
-          <div class="workImg2" alt="css project">
-            <h1>
-              <a
-                href="https://jacklabukas.github.io/prework-study-guide/"
-                target="_blank"
-                >Prework</a
-              >
-              <br />
-              <a
-                href="https://jacklabukas.github.io/prework-study-guide/"
-                target="_blank"
-                >Study-Guide</a
-              >
-            </h1>
-          </div>
-          <div class="workImg3" alt="javascript project">
-            <h1>
-              JavaScript
-              <br />
-              Dummy
-            </h1>
-          </div>
-          <div class="workImg4" alt="react project">
-            <h1>
-              React
-              <br />
-              Dummy
-            </h1>
-          </div>
-          <div class="workImg5" alt="mongo database project">
-            <h1>
-              MongoDB
-              <br />
-              Dummy
-            </h1>
-          </div>
+          <a
+            href=" https://jacklabukas.github.io/prework-study-guide/"
+            target="_blank"
+          >
+            <div class="workImg2" alt="prework project">
+              <h1>
+                Prework
+                <br />
+                Study-Guide
+              </h1>
+            </div>
+          </a>
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+            target="_blank"
+          >
+            <div class="workImg3" alt="javascript project">
+              <h1>
+                JavaScript
+                <br />
+                Dummy
+              </h1>
+            </div>
+          </a>
+          <a href="https://reactjs.org/" target="_blank">
+            <div class="workImg4" alt="react project">
+              <h1>
+                React
+                <br />
+                Dummy
+              </h1>
+            </div>
+          </a>
+          <a href="https://www.mongodb.com/">
+            <div class="workImg5" alt="mongo database project">
+              <h1>
+                MongoDB
+                <br />
+                Dummy
+              </h1>
+            </div>
+          </a>
         </div>
       </section>
 
