updated css and html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 
     <!-- hero banner -->
     <section class="hero-banner">
+      <img
+        src="./images/me_use_this.jpg"
+        alt="profile picture"
+        width="13%"
+        height="40%"
+      />
       <h2>Work Showcase</h2>
     </section>
 
@@ -51,8 +57,6 @@
         <h2>Work</h2>
 
         <div id="images">
-          <!-- if i wrap this 'workImg1' in anchor tag,
-          image shrinks to half on the collum 50% instead of 100% but the other ones work! if i use height property on individual 'workImg' selectors-->
           <div class="workImg1" alt="html project">
             <h1>
               <a
